whole website revamped. added sky map. centralized navigation. added background animation. shifted to firebase.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Aryabhat Foundation</title>
@@ -12,61 +13,47 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
+
 <body>
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-68513114-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-68513114-1', 'auto');
+    ga('send', 'pageview');
 
   </script>
   <div class="container">
     <section class="header">
-      <div class="row">
-        <div class="six columns offset-by-two ">
-          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
-        </div>
-        <div class="six columns logo">
-          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
-        </div>
-      </div>
+      <!-- Injected by js/layout.js -->
     </section>
     <nav class="navbar">
-      <div class="container">
-        <ul class="navbar-list">
-          <li class="navbar-item current"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
+      <!-- Injected by js/layout.js -->
     </nav>
 
-   <div class="main row">
-    <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
-      <h3>Updates</h3>
-<p class="card">
-  <span>Astro Quiz 2025-26</span>
-  <br>
-  <br>
-  <a target="_" class="button-primary button" href="files/2025/Mrt2025.pdf">Secondary Level Merit List</a>
-  <!--br>
+    <div class="main row">
+      <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
+        <h3>Updates</h3>
+        <p class="card">
+          <span class="center renfrew">Astro Quiz 2025-26</span>
+          <br class="spacer">
+          <a target="_" class="button-primary button" href="files/2025/Mrt2025.pdf">Secondary Level Merit List</a>
+          <!--br>
   <a target="_"  class="button-primary button"  href="files/2025/Short_Summ_2025.pdf">Summary of Participation</a>
   <br-->
-</p>
-<p class="card">
-    Request Event
-    <br>
-    <br>
-    <a class="card button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
-  </p>
+        </p>
+        <p class="card">
+          <span class="center renfrew">Request Event</span>
+          <br class="spacer">
+          <a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
+        </p>
 
 
-<!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
+        <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
 <p>Proposed dates for Observatory Trips</p>
 <table style="border:1px solid white;">
   <tr>
@@ -91,38 +78,59 @@
   </tr>
 
 </table-->
-    </div>
-		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
+      </div>
+      <div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 
-		 <h4 align="center">About Aryabhat Foundation</h4>
-			<p class="justify">
-				Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which has now taken a shape of a duly registered social service organisation. Supported by a group of people dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a tasty way to the youngsters. This will inculcate a science-based temperament in them.
-			</p>
-			<p class="justify">
-				The celestial bodies had always been objects of anxiety in the minds of the people through olden days. Fortunes & evils were widely associated with the appearance of these bodies in the sky; some of which were looked at with fear that their shadows cause disasters. The emergence of scientific information has enabled people to understand their origin & structure and thus come out of the feeling of trepidation about them. We study them under Astronomy, which is considered to be the mother of all science streams.
-			</p>
-			<p class="justify">
-				Astronomy is not only a constructive hobby for the children but also a pathway to bright future for youngsters aspiring for a challenging career in space technology. In a scenario where the traditional educational streams have reached saturation, it becomes almost mandatory for all to think of new fields wherein children can find good prospects for their career as well.
-			</p>
-			<p class="justify">
-				Under our special drive for popularising Astronomy, we conduct several programs, which broaden the outlook of people through scientific and authentic information about celestial objects. These programs have also been helpful in eradicating myths & superstitions from amongst the society. The objective of this endeavor has been well justified with excelling of our students at National and International levels. In yesteryears, students groomed at Aryabhat have added several feathers to the cap of the Nation. These include four Gold and one Silver Medals in the International Astronomy Olympiads, distinctions in RRGTM Project of NASA and other International forums.
-			</p>
-			<p class="justify">
-				We look for cooperation from the students, teachers, school authorities and parents for bringing our small effort to a great success.
-			</p>
+        <h4 align="center">About Aryabhat Foundation</h4>
+        <p class="justify">
+          Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which
+          has now taken a shape of a duly registered social service organisation. Supported by a group of people
+          dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a
+          tasty way to the youngsters. This will inculcate a science-based temperament in them.
+        </p>
+        <p class="justify">
+          The celestial bodies had always been objects of anxiety in the minds of the people through olden days.
+          Fortunes & evils were widely associated with the appearance of these bodies in the sky; some of which were
+          looked at with fear that their shadows cause disasters. The emergence of scientific information has enabled
+          people to understand their origin & structure and thus come out of the feeling of trepidation about them. We
+          study them under Astronomy, which is considered to be the mother of all science streams.
+        </p>
+        <p class="justify">
+          Astronomy is not only a constructive hobby for the children but also a pathway to bright future for youngsters
+          aspiring for a challenging career in space technology. In a scenario where the traditional educational streams
+          have reached saturation, it becomes almost mandatory for all to think of new fields wherein children can find
+          good prospects for their career as well.
+        </p>
+        <p class="justify">
+          Under our special drive for popularising Astronomy, we conduct several programs, which broaden the outlook of
+          people through scientific and authentic information about celestial objects. These programs have also been
+          helpful in eradicating myths & superstitions from amongst the society. The objective of this endeavor has been
+          well justified with excelling of our students at National and International levels. In yesteryears, students
+          groomed at Aryabhat have added several feathers to the cap of the Nation. These include four Gold and one
+          Silver Medals in the International Astronomy Olympiads, distinctions in RRGTM Project of NASA and other
+          International forums.
+        </p>
+        <p class="justify">
+          We look for cooperation from the students, teachers, school authorities and parents for bringing our small
+          effort to a great success.
+        </p>
 
-      <p><a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
-       <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
-       <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
-       <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
-     </p>
-		 </div>
+        <p><a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg" /></a>
+        </p>
+      </div>
     </div>
-    <div class="row" >
-  		<p> &copy; Aryabhat Foundation &middot;</p>
-	   </div>
+    <div class="row">
+      <p> &copy; Aryabhat Foundation &middot;</p>
+    </div>
   </div>
 
   </div>
+  <!-- Background Animation -->
+  <script src="js/background-stars.js"></script>
+  <script src="js/layout.js"></script>
 </body>
+
 </html>
