--- a/404.html
+++ b/404.html
@@ -1,100 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>404 - Page Not Found</title>
-    <meta name="description" content="404 Page - Page Not Found" />
-    <meta name="author" content="Alok Mandavgane, Aryabhat Foundation" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-    <style>
-      /* Add some basic styling for the animation */
-      #animation-container {
-        position: relative;
-        width: 200px; /* Adjust as needed */
-        height: 200px; /* Adjust as needed */
-        margin: 20px auto;
+
+<head>
+  <meta charset="utf-8" />
+  <title>404 - Page Not Found</title>
+  <meta name="description" content="404 Page - Page Not Found" />
+  <meta name="author" content="Alok Mandavgane, Aryabhat Foundation" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+  <style>
+    /* Add some basic styling for the animation */
+    #animation-container {
+      position: relative;
+      width: 200px;
+      /* Adjust as needed */
+      height: 200px;
+      /* Adjust as needed */
+      margin: 20px auto;
+    }
+
+    .star {
+      position: absolute;
+      width: 5px;
+      height: 5px;
+      background: white;
+      border-radius: 50%;
+      animation: twinkle 2s infinite;
+    }
+
+    @keyframes twinkle {
+      0% {
+        opacity: 0.2;
       }
 
-      .star {
-        position: absolute;
-        width: 5px;
-        height: 5px;
-        background: white;
-        border-radius: 50%;
-        animation: twinkle 2s infinite;
+      50% {
+        opacity: 1;
       }
 
-      @keyframes twinkle {
-        0% {
-          opacity: 0.2;
-        }
-        50% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0.2;
-        }
+      100% {
+        opacity: 0.2;
       }
-    </style>
+    }
+  </style>
 
 
-  </head>
-  <body>
-    <div class="container">
-      <section class="header">
-        <div class="row">
-          <div class="six columns offset-by-two ">
-            <img class="value-img" style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg" alt="Aryabhat Foundation">
-          </div>
-          <div class="six columns logo">
-            <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg" alt="Aryabhat Logo">
-          </div>
+</head>
+
+<body>
+  <div class="container">
+    <section class="header">
+      <!-- Injected by js/layout.js -->
+    </section>
+
+    <nav class="navbar">
+      <!-- Injected by js/layout.js -->
+    </nav>
+
+    <div class="main row">
+      <div class="twelve columns" style="text-align: center;">
+        <h2>404 - Page Not Found</h2>
+        <h1>Oops! It seems like this page doesn't exist.</h1>
+        <p>
+          The requested URL was not found on this server.
+          Please check the address or return to the
+          <a href="index.html">homepage</a>.
+        </p>
+
+        <!-- Add Astronomy Related Animation -->
+        <div id="animation-container">
+          <div class="star" style="top: 20%; left: 10%;"></div>
+          <div class="star" style="top: 50%; left: 30%;"></div>
+          <div class="star" style="top: 80%; left: 50%;"></div>
+          <div class="star" style="top: 30%; left: 70%;"></div>
+          <div class="star" style="top: 60%; left: 90%;"></div>
+          <!-- You can add more stars as needed -->
         </div>
-      </section>
 
-      <nav class="navbar">
-        <div class="container">
-          <ul class="navbar-list">
-            <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
-      </nav>
-
-      <div class="main row">
-        <div class="twelve columns" style="text-align: center;">
-          <h2>404 - Page Not Found</h2>
-          <h1>Oops! It seems like this page doesn't exist.</h1>
-          <p>
-            The requested URL was not found on this server.
-            Please check the address or return to the
-            <a href="index.html">homepage</a>.
-          </p>
-
-          <!-- Add Astronomy Related Animation -->
-          <div id="animation-container">
-            <div class="star" style="top: 20%; left: 10%;"></div>
-            <div class="star" style="top: 50%; left: 30%;"></div>
-            <div class="star" style="top: 80%; left: 50%;"></div>
-            <div class="star" style="top: 30%; left: 70%;"></div>
-            <div class="star" style="top: 60%; left: 90%;"></div>
-            <!-- You can add more stars as needed -->
-          </div>
-
-        </div>
-      </div>
-
-      <div class="row">
-        <p>&copy; Aryabhat Foundation</p>
       </div>
     </div>
-  </body>
+
+    <div class="row">
+      <p>&copy; Aryabhat Foundation</p>
+    </div>
+  </div>
+  <script src="js/background-stars.js"></script>
+  <script src="js/layout.js"></script>
+</body>
+
 </html>
