--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Contact Us</title>
@@ -12,93 +13,85 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
-<body >
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-68513114-1', 'auto');
-  ga('send', 'pageview');
+<body>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-68513114-1', 'auto');
+    ga('send', 'pageview');
 
   </script>
   <div class="container">
     <section class="header">
-      <div class="row">
-        <div class="six columns offset-by-two ">
-          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
-        </div>
-        <div class="six columns logo">
-          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
-        </div>
-      </div>
+      <!-- Injected by js/layout.js -->
     </section>
 
 
     <nav class="navbar">
-      <div class="container">
-        <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
-          <li class="navbar-item current"><a class="navbar-link" href="contact.html">Contact Us</a></li>
-        </ul>
-
-      </div>
+      <!-- Injected by js/layout.js -->
     </nav>
 
-   <div class="main row">
-		<div class="six columns" >
+    <div class="main row">
+      <div class="six columns">
         <h4>Address</h4>
-		      <p>Aryabhat Foundation
-            <br>
-            S-1, Swapnil Apartment VIII
-            <br>258, Trilanga, Shahpura, Bhopal 462039
-            
-					</p>
-          
+        <p>Aryabhat Foundation
+          <br>
+          S-1, Swapnil Apartment VIII
+          <br>258, Trilanga, Shahpura, Bhopal 462039
+
+        </p>
+
         <h4>Email</h4>
-        <p><a href="mailto:info@aryabhat.org">info@aryabhat.org</a>
+        <p>
           <a href="mailto:aryabhat.foundation@gmail.com">aryabhat.foundation@gmail.com</a>
-				</p>
+        </p>
         <h4>Phone</h4>
-        <p>📞 +91 9425674075 &nbsp; <a class="button button-primary" href="https://wa.me/9425674075">💬 whatsapp </a></p>
+        <p>📞 +91 9425674075 &nbsp; <a class="button button-primary" href="https://wa.me/9425674075">💬 whatsapp </a>
+        </p>
         <h4>Request Event</h4>
         <p><a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a></p>
-		 </div>
+      </div>
 
       <div class="six columns">
-          <div id="google-maps-canvas" style="height:300px; width:100%;"><iframe
-              style="height:100%;width:100%;border:0;" frameborder="0"
-              src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
-          </div>
-          <style>
-            #google-maps-canvas img {
-              max-height: none;
-              margin:5%;
-              max-width: none !important;
-              background: none !important;
-            }
-          </style>
+        <div id="google-maps-canvas" style="height:300px; width:100%;"><iframe style="height:100%;width:100%;border:0;"
+            frameborder="0"
+            src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+        </div>
+        <style>
+          #google-maps-canvas img {
+            max-height: none;
+            margin: 5%;
+            max-width: none !important;
+            background: none !important;
+          }
+        </style>
       </div>
     </div>
-    <div class="main row" >
-      <div class="six columns" >
+    <div class="main row">
+      <div class="six columns">
         <p>
-          <a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
-          <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
-          <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
-          <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
+          <a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg" /></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg" /></a>
         </p>
-     </div>
+      </div>
     </div>
-    <div class="row" >
-  		<p> &copy; Aryabhat Foundation &middot;</p>
-	   </div>
+    <div class="row">
+      <p> &copy; Aryabhat Foundation &middot;</p>
+    </div>
   </div>
 
   </div>
+  <!-- Background Animation -->
+  <script src="js/background-stars.js"></script>
+  <script src="js/layout.js"></script>
 </body>
+
 </html>
