--- a/download.html
+++ b/download.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Download</title>
@@ -12,77 +13,77 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
-<body >
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-68513114-1', 'auto');
-  ga('send', 'pageview');
+<body>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-68513114-1', 'auto');
+    ga('send', 'pageview');
 
   </script>
   <div class="container">
     <section class="header">
-      <div class="row">
-        <div class="six columns offset-by-two ">
-          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
-        </div>
-        <div class="six columns logo">
-          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
-        </div>
-      </div>
+      <!-- Injected by js/layout.js -->
     </section>
 
     <nav class="navbar">
-      <div class="container">
-        <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
-          <li class="navbar-item current"><a class="navbar-link" href="download.html">Download</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
+      <!-- Injected by js/layout.js -->
     </nav>
 
-   <div class="main row">
-		<div class="six column" >
+    <div class="main row">
+      <div class="six column">
         <h3>Information</h3>
         <div class="card">
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
-           <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
-           <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular Astro Quiz 2025-26</a>
+          <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction
+            Video</a>
+          <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular
+            Astro Quiz 2025-26</a>
         </div>
         <br>
         <br>
         <h3 id="studymaterial">Study Material</h3>
         <div class="card">
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
+          <a class="button button-primary" target="_blank"
+            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study
+            Material 1</a>
+          <a class="button button-primary" target="_blank"
+            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study
+            Material 2</a>
+          <a class="button button-primary" target="_blank"
+            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study
+            Material 3</a>
+          <a class="button button-primary" target="_blank"
+            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
           <a class="button button-primary" target="_blank" href="https://youtu.be/s5_1iDcbVrQ">▶️ Video Lesson</a>
-            <br>Updated on 1 July 2025
+          <br>Updated on 1 July 2025
         </div>
         <br>
         <br>
 
-        <h3 id="institutional">Institutional Registration <span style="font-size:12px; color:white" > (only for Schools)</span></h3>
+        <h3 id="institutional">Institutional Registration <span style="font-size:12px; color:white"> (only for
+            Schools)</span></h3>
         <div class="card">
-      <!--, for individual registration go
+          <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
-          <a class="button button-primary" target="_blank" href="files/2025/Forwarding_Letter_for_Entries.pdf">Letter for Forwarding Institution Details </a>
-          <a class="button button-primary" target="_blank" href="files/Institutional_Format.xls">Format for Institutional Entries </a>
+          <a class="button button-primary" target="_blank" href="files/2025/Forwarding_Letter_for_Entries.pdf">Letter
+            for Forwarding Institution Details </a>
+          <a class="button button-primary" target="_blank" href="files/Institutional_Format.xls">Format for
+            Institutional Entries </a>
 
-           <br>1 April 2025 to 25 July 2025
+          <br>1 April 2025 to 25 July 2025
         </div>
         <br>
         <h3>Individual Registration</h3>
-         <div class="card">
+        <div class="card">
           <p>Registration Closed</p>
         </div>
         <br>
@@ -97,13 +98,18 @@
         <h3>Volunteer</h3>
         <div class="card">
           <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
-          <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
+          <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application
+            Form</a>
         </div>
-		 </div>
+      </div>
     </div>
-    <div class="row" >
-  		<p> &copy; Aryabhat Foundation &middot;</p>
-	   </div>
+    <div class="row">
+      <p> &copy; Aryabhat Foundation &middot;</p>
+    </div>
   </div>
+  <!-- Background Animation -->
+  <script src="js/background-stars.js"></script>
+  <script src="js/layout.js"></script>
 </body>
+
 </html>
