--- a/photos.html
+++ b/photos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Photos: Aryabhat</title>
@@ -12,101 +13,139 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="js/jquery.bxslider.min.js"></script>
-  <link href="css/jquery.bxslider.css" rel="stylesheet" />
-  <script>
-  $(document).ready(function(){
-    $('.bxslider').bxSlider({
-      adaptiveHeight: true,
-      mode: 'fade',
-      auto: true,
-      autoControls: true,
-      captions: true
-    });
-  });
-  </script>
-</head>
-<body >
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-68513114-1', 'auto');
-  ga('send', 'pageview');
+</head>
+
+<body>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-68513114-1', 'auto');
+    ga('send', 'pageview');
 
   </script>
   <div class="container">
     <section class="header">
-      <div class="row">
-        <div class="six columns offset-by-two ">
-          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
-        </div>
-        <div class="six columns logo">
-          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
-        </div>
-      </div>
+      <!-- Injected by js/layout.js -->
     </section>
 
 
     <nav class="navbar">
-      <div class="container">
-        <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
-          <li class="navbar-item current"><a class="navbar-link" href="photos.html">Photos</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
-        </ul>
-
-      </div>
+      <!-- Injected by js/layout.js -->
     </nav>
 
-   <div class="main row">
-		<div class="six column" >
-    <ul class="bxslider">
-      <li><img src="img/001.jpg" title="Yash, Harshit, Mayank & Dhananjay with Prof Jagdev Singh" /></li>
-      <li><img src="img/002.jpg" title="Harshit, Yash, Mayank & Dhananjay with Prof G S D Babu" /></li>
-      <li><img src="img/003.jpg" title="Team Nainital making a presentation to Prof Ram Sagar" /></li>
-      <li><img src="img/004.jpg" title="Team Kodaikanal with Dr S Muneer" /></li>
-      <li><img src="img/005.jpg" title="Team Udaipur at Gurushikhar Observatory" /></li>
-      <li><img src="img/006.jpg" title="Aveek, Amit and Alok at Nainital State Observatory" /></li>
-      <li><img src="img/007.jpg" title="Team Udaipur at island Observatory" /></li>
-      <li><img src="img/008.jpg" title="Team Nainital at Sampuranand Telescope" /></li>
-      <li><img src="img/009.jpg" title="Team Udaipur at BARC’s Gamma Ray Observatory" /></li>
-      <li><img src="img/010.jpg" title="Team at the VITM Bangaluru" /></li>
-      <li><img src="img/011.jpg" title="Combined Team of Kodaikanal & Kavalur at Bangalore" /></li>
-      <li><img src="img/012.jpg" title="Vijay, Amit & Shikhar at HEGRO, Pachmarhi" /></li>
-      <li><img src="img/013.jpg" title="Combined Team of Kodaikanal & Kavalur at VITM, Bangalore" /></li>
-      <li><img src="img/014.jpg" title="Team Nainital at ARIES" /></li>
-      <li><img src="img/015.jpg" title="Team Nainital at Jantar Mantar, Delhi" /></li>
-      <li><img src="img/016.jpg" title="Team Kavalur at Vainu Bappu Observatory" /></li>
-      <li><img src="img/017.jpg" title="Team Udaipur with Dr Brajesh at GONG setup, Udaipur" /></li>
-      <li><img src="img/018.jpg" title="Combined Team of Kodaikanal & Kavalur at ISRO, Bangalore" /></li>
-      <li><img src="img/019.jpg" title="Saurabh, Denver and Tanmay at IUCAA, Pune" /></li>
-      <li><img src="img/020.jpg" title="Saurabh, Tanmay & Denver at IUCAA, Pune" /></li>
-      <li><img src="img/021.jpg" title="Tanmay, Denver & Saurabh at GMRT, Khodad" /></li>
-      <li><img src="img/022.jpg" title="Team Udaipur at Solar Observatory" /></li>
-      <li><img src="img/023.jpg" title="Winners met Prof Yashpal in Delhi" /></li>
-      <li><img src="img/024.jpg" title="Shreya, Soumya & Dhruv at Udaipur Solar Observatory" /></li>
-      <li><img src="img/025.jpg" title="Chirag, Omanshu & Chaitanya at IUCAA, Pune" /></li>
-      <li><img src="img/026.jpg" title="Tanya, Nikhil & Medha at VBO, Kavalur" /></li>
-      <li><img src="img/027.jpg" title="Combined Team of Kodaikanal & Kavalur at RRI, Bangalore" /></li>
-      <li><img src="img/028.jpg" title="Combined team of Kodaikanal and Kavalur at Bangalore" /></li>
-      <li><img src="img/029.jpg" title="Students gearing up for a public show in Pachmarhi" /></li>
-      <li><img src="img/030.jpg" title="Students at VITM Bangaluru" /></li>
-    </ul>
-    <p>Photos of past meritorious students visiting observatories and other esteemed institutions.</p>
-		 </div>
+    <div class="main row">
+      <div class="twelve columns">
+        <div class="photo-gallery">
+          <div class="photo-item"><img src="img/001.jpg" alt="Yash, Harshit, Mayank & Dhananjay with Prof Jagdev Singh">
+            <p class="photo-caption">Yash, Harshit, Mayank & Dhananjay with Prof Jagdev Singh</p>
+          </div>
+          <div class="photo-item"><img src="img/002.jpg" alt="Harshit, Yash, Mayank & Dhananjay with Prof G S D Babu">
+            <p class="photo-caption">Harshit, Yash, Mayank & Dhananjay with Prof G S D Babu</p>
+          </div>
+          <div class="photo-item"><img src="img/003.jpg" alt="Team Nainital making a presentation to Prof Ram Sagar">
+            <p class="photo-caption">Team Nainital making a presentation to Prof Ram Sagar</p>
+          </div>
+          <div class="photo-item"><img src="img/004.jpg" alt="Team Kodaikanal with Dr S Muneer">
+            <p class="photo-caption">Team Kodaikanal with Dr S Muneer</p>
+          </div>
+          <div class="photo-item"><img src="img/005.jpg" alt="Team Udaipur at Gurushikhar Observatory">
+            <p class="photo-caption">Team Udaipur at Gurushikhar Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/006.jpg" alt="Aveek, Amit and Alok at Nainital State Observatory">
+            <p class="photo-caption">Aveek, Amit and Alok at Nainital State Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/007.jpg" alt="Team Udaipur at island Observatory">
+            <p class="photo-caption">Team Udaipur at island Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/008.jpg" alt="Team Nainital at Sampuranand Telescope">
+            <p class="photo-caption">Team Nainital at Sampuranand Telescope</p>
+          </div>
+          <div class="photo-item"><img src="img/009.jpg" alt="Team Udaipur at BARC’s Gamma Ray Observatory">
+            <p class="photo-caption">Team Udaipur at BARC’s Gamma Ray Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/010.jpg" alt="Team at the VITM Bangaluru">
+            <p class="photo-caption">Team at the VITM Bangaluru</p>
+          </div>
+          <div class="photo-item"><img src="img/011.jpg" alt="Combined Team of Kodaikanal & Kavalur at Bangalore">
+            <p class="photo-caption">Combined Team of Kodaikanal & Kavalur at Bangalore</p>
+          </div>
+          <div class="photo-item"><img src="img/012.jpg" alt="Vijay, Amit & Shikhar at HEGRO, Pachmarhi">
+            <p class="photo-caption">Vijay, Amit & Shikhar at HEGRO, Pachmarhi</p>
+          </div>
+          <div class="photo-item"><img src="img/013.jpg" alt="Combined Team of Kodaikanal & Kavalur at VITM, Bangalore">
+            <p class="photo-caption">Combined Team of Kodaikanal & Kavalur at VITM, Bangalore</p>
+          </div>
+          <div class="photo-item"><img src="img/014.jpg" alt="Team Nainital at ARIES">
+            <p class="photo-caption">Team Nainital at ARIES</p>
+          </div>
+          <div class="photo-item"><img src="img/015.jpg" alt="Team Nainital at Jantar Mantar, Delhi">
+            <p class="photo-caption">Team Nainital at Jantar Mantar, Delhi</p>
+          </div>
+          <div class="photo-item"><img src="img/016.jpg" alt="Team Kavalur at Vainu Bappu Observatory">
+            <p class="photo-caption">Team Kavalur at Vainu Bappu Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/017.jpg" alt="Team Udaipur with Dr Brajesh at GONG setup, Udaipur">
+            <p class="photo-caption">Team Udaipur with Dr Brajesh at GONG setup, Udaipur</p>
+          </div>
+          <div class="photo-item"><img src="img/018.jpg" alt="Combined Team of Kodaikanal & Kavalur at ISRO, Bangalore">
+            <p class="photo-caption">Combined Team of Kodaikanal & Kavalur at ISRO, Bangalore</p>
+          </div>
+          <div class="photo-item"><img src="img/019.jpg" alt="Saurabh, Denver and Tanmay at IUCAA, Pune">
+            <p class="photo-caption">Saurabh, Denver and Tanmay at IUCAA, Pune</p>
+          </div>
+          <div class="photo-item"><img src="img/020.jpg" alt="Saurabh, Tanmay & Denver at IUCAA, Pune">
+            <p class="photo-caption">Saurabh, Tanmay & Denver at IUCAA, Pune</p>
+          </div>
+          <div class="photo-item"><img src="img/021.jpg" alt="Tanmay, Denver & Saurabh at GMRT, Khodad">
+            <p class="photo-caption">Tanmay, Denver & Saurabh at GMRT, Khodad</p>
+          </div>
+          <div class="photo-item"><img src="img/022.jpg" alt="Team Udaipur at Solar Observatory">
+            <p class="photo-caption">Team Udaipur at Solar Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/023.jpg" alt="Winners met Prof Yashpal in Delhi">
+            <p class="photo-caption">Winners met Prof Yashpal in Delhi</p>
+          </div>
+          <div class="photo-item"><img src="img/024.jpg" alt="Shreya, Soumya & Dhruv at Udaipur Solar Observatory">
+            <p class="photo-caption">Shreya, Soumya & Dhruv at Udaipur Solar Observatory</p>
+          </div>
+          <div class="photo-item"><img src="img/025.jpg" alt="Chirag, Omanshu & Chaitanya at IUCAA, Pune">
+            <p class="photo-caption">Chirag, Omanshu & Chaitanya at IUCAA, Pune</p>
+          </div>
+          <div class="photo-item"><img src="img/026.jpg" alt="Tanya, Nikhil & Medha at VBO, Kavalur">
+            <p class="photo-caption">Tanya, Nikhil & Medha at VBO, Kavalur</p>
+          </div>
+          <div class="photo-item"><img src="img/027.jpg" alt="Combined Team of Kodaikanal & Kavalur at RRI, Bangalore">
+            <p class="photo-caption">Combined Team of Kodaikanal & Kavalur at RRI, Bangalore</p>
+          </div>
+          <div class="photo-item"><img src="img/028.jpg" alt="Combined team of Kodaikanal and Kavalur at Bangalore">
+            <p class="photo-caption">Combined team of Kodaikanal and Kavalur at Bangalore</p>
+          </div>
+          <div class="photo-item"><img src="img/029.jpg" alt="Students gearing up for a public show in Pachmarhi">
+            <p class="photo-caption">Students gearing up for a public show in Pachmarhi</p>
+          </div>
+          <div class="photo-item"><img src="img/030.jpg" alt="Students at VITM Bangaluru">
+            <p class="photo-caption">Students at VITM Bangaluru</p>
+          </div>
+        </div>
+        <p>Photos of past meritorious students visiting observatories and other esteemed institutions.</p>
+      </div>
 
     </div>
-    <div class="row" >
-  		<p> &copy; Aryabhat Foundation &middot;</p>
-	   </div>
+    <div class="row">
+      <p> &copy; Aryabhat Foundation &middot;</p>
+    </div>
   </div>
 
   </div>
+  <!-- Background Animation -->
+  <script src="js/background-stars.js"></script>
+  <script src="js/layout.js"></script>
 </body>
+
 </html>
