--- a/testimonial.html
+++ b/testimonial.html
@@ -1,55 +1,56 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/screen.css" media="screen" />
-		<title>Submit Testimonial</title>  
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-	</head>
-	<body>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<!DOCTYPE html>
+<html lang="en">
 
-ga('create', 'UA-68513114-1', 'auto');
-ga('send', 'pageview');
+<head>
+	<meta charset="utf-8">
+	<title>Submit Testimonial: Aryabhat</title>
+	<meta name="description" content="Submit a testimonial for Aryabhat Foundation">
+	<meta name="author" content="Alok Mandavgane, Aryabhat Foundation">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+</head>
 
-</script>
-		<div id="wrapper">
-			<div id="header">
-				<div id="logo">
-					<a href="index.html"> <img src="images/newlogo.png"></a>
-				</div>
-				<div class="clr"></div>
+<body>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-68513114-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+	<div class="container">
+		<section class="header">
+			<!-- Injected by js/layout.js -->
+		</section>
+
+		<nav class="navbar">
+			<!-- Injected by js/layout.js -->
+		</nav>
+
+		<div class="main row">
+			<div class="twelve columns">
+				<iframe
+					src="https://docs.google.com/forms/d/11GkwKLOwYKaU41e7MEluvyA_Vmm6MpGljG7CB7wtOtE/viewform?embedded=true"
+					width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			</div>
-			<div class="content">
-				<ul id="menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="quiz.html">Quiz</a></li>
-					<li><a href="download.html">Download</a></li>
-					<li><a href="photos.html">Photos</a></li>
-					<li><a href="news.html">News</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-				<center>
-				<iframe src="https://docs.google.com/forms/d/11GkwKLOwYKaU41e7MEluvyA_Vmm6MpGljG7CB7wtOtE/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-				</div>
-
-			</div>
-
-			<div id="footer">
-				<p id="links">
-					<a href="#"></a>
-				</p>
-				<p>
-					<a href="#"></a>
-				</p>
-				<p>Copyright &copy; 2012 &minus; Aryabhat Foundation &middot;</p>			</div>
 		</div>
-	</body>
+		<div class="row">
+			<p> &copy; Aryabhat Foundation &middot;</p>
+		</div>
+	</div>
+
+	<!-- Background Animation -->
+	<script src="js/background-stars.js"></script>
+	<script src="js/layout.js"></script>
+</body>
+
 </html>
