updated css for download , links shifted to quiz

--- a/download.html
+++ b/download.html
@@ -37,70 +37,37 @@
     </nav>
 
     <div class="main row">
-      <div class="six column">
-        <h3>Information</h3>
-        <div class="card">
-          <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
-          <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
-          <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction
-            Video</a>
-          <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular
-            Astro Quiz 2025-26</a>
-        </div>
-        <br>
-        <br>
-        <h3 id="studymaterial">Study Material</h3>
-        <div class="card">
-          <a class="button button-primary" target="_blank"
-            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study
-            Material 1</a>
-          <a class="button button-primary" target="_blank"
-            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study
-            Material 2</a>
-          <a class="button button-primary" target="_blank"
-            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study
-            Material 3</a>
-          <a class="button button-primary" target="_blank"
-            href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-          <a class="button button-primary" target="_blank" href="https://youtu.be/s5_1iDcbVrQ">▶️ Video Lesson</a>
-          <br>Updated on 1 July 2025
-        </div>
-        <br>
-        <br>
+      <div class="twelve columns">
+        <br><br>
 
-        <h3 id="institutional">Institutional Registration <span style="font-size:12px; color:white"> (only for
-            Schools)</span></h3>
-        <div class="card">
-          <!--, for individual registration go
-          <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
-          <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
-          <a class="button button-primary" target="_blank" href="files/2025/Forwarding_Letter_for_Entries.pdf">Letter
-            for Forwarding Institution Details </a>
-          <a class="button button-primary" target="_blank" href="files/Institutional_Format.xls">Format for
-            Institutional Entries </a>
+        <details class="card-container" open>
+          <summary>
+            <h5>Information</h5>
+          </summary>
+          <div class="card-content" id="card-information">
+            <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
+            <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
+            <a class="button button-primary" target="_blank" href="files/Aryabhat_Hindi_Profile.pdf">आर्यभट फाउंडेशन :
+              एक
+              परिचय</a>
+            <!--a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction
+              Video</a>
+              <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular
+                Astro Quiz 2025-26</a-->
+          </div>
+        </details>
 
-          <br>1 April 2025 to 25 July 2025
-        </div>
-        <br>
-        <h3>Individual Registration</h3>
-        <div class="card">
-          <p>Registration Closed</p>
-        </div>
-        <br>
-        <h3>Government Circulars</h3>
-        <div class="card">
-          <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
-          <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2025/NVS_2025-26.pdf">JNV Circular</a>
-        </div>
-        <br>
-        <h3>Volunteer</h3>
-        <div class="card">
-          <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
-          <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application
-            Form</a>
-        </div>
+        <details class="card-container" open>
+          <summary>
+            <h5>Volunteer</h5>
+          </summary>
+          <div class="card-content" id="card-volunteer">
+            <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
+            <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer
+              Application
+              Form</a>
+          </div>
+        </details>
       </div>
     </div>
     <div class="row">
