--- a/index.html
+++ b/index.html
@@ -38,19 +38,25 @@
     <div class="main row">
       <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
         <h3>Updates</h3>
-        <p class="card">
-          <span class="center renfrew">Astro Quiz 2025-26</span>
-          <br class="spacer">
-          <a target="_" class="button-primary button" href="files/2025/Mrt2025.pdf">Secondary Level Merit List</a>
-          <!--br>
-  <a target="_"  class="button-primary button"  href="files/2025/Short_Summ_2025.pdf">Summary of Participation</a>
-  <br-->
-        </p>
-        <p class="card">
-          <span class="center renfrew">Request Event</span>
-          <br class="spacer">
-          <a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
-        </p>
+        <details class="card-container" open style="width: 100%;">
+          <summary>
+            <h4>Astro Quiz 2025-26</h4>
+          </summary>
+          <div class="card-content" style="text-align: center;">
+            <a target="_" class="button-primary button" href="files/2025/Mrt2025.pdf">Secondary Level Merit List</a>
+            <!--br>
+    <a target="_"  class="button-primary button"  href="files/2025/Short_Summ_2025.pdf">Summary of Participation</a>
+    <br-->
+          </div>
+        </details>
+        <details class="card-container" open style="width: 100%;">
+          <summary>
+            <h4>Request Event</h4>
+          </summary>
+          <div class="card-content" style="text-align: center;">
+            <a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
+          </div>
+        </details>
 
 
         <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
