added social media feed

--- a/photos.html
+++ b/photos.html
@@ -41,7 +41,14 @@
 
     <div class="main row">
       <div class="twelve columns">
-        <div class="photo-gallery">
+        <div class="embedsocial-hashtag" data-ref="18326ad1b6e0b1a8454f5b1fc523422069364029" data-theme="dark"> <a
+            class="feed-powered-by-es feed-powered-by-es-feed-img es-widget-branding"
+            href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Instagram widget"> <img
+              src="https://embedsocial.com/cdn/icon/embedsocial-logo.webp" alt="EmbedSocial">
+            <div class="es-widget-branding-text">Instagram widget</div>
+          </a> </div>
+        <script> (function (d, s, id) { var js; if (d.getElementById(id)) { return; } js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
+        <!-- <div class="photo-gallery">
           <div class="photo-item"><img src="img/001.jpg" alt="Yash, Harshit, Mayank & Dhananjay with Prof Jagdev Singh">
             <p class="photo-caption">Yash, Harshit, Mayank & Dhananjay with Prof Jagdev Singh</p>
           </div>
@@ -133,7 +140,7 @@
             <p class="photo-caption">Students at VITM Bangaluru</p>
           </div>
         </div>
-        <p>Photos of past meritorious students visiting observatories and other esteemed institutions.</p>
+        <p>Photos of past meritorious students visiting observatories and other esteemed institutions.</p> -->
       </div>
 
     </div>
