--- a/quiz.html
+++ b/quiz.html
@@ -42,6 +42,19 @@
         <br>
         <details class="card-container">
           <summary>
+            <h5>📜 Circulars</h5>
+          </summary>
+          <div class="card-content" id="card-circulars">
+            <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
+            <a class="button button-primary" target="_blank" href="files/2026/Circular_AstroQuiz_2026-27.pdf">Our
+              Circular</a>
+            <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
+            <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
+            <a class="button button-primary" target="_blank" href="files/2025/NVS_2025-26.pdf">JNV Circular</a>
+          </div>
+        </details>
+        <details class="card-container">
+          <summary>
             <h5 id="studymaterial">📚 Notes</h5>
           </summary>
           <div class="card-content" id="card-studymaterial">
@@ -88,17 +101,7 @@
             <p class="renfrew" style="margin: 0;">Registration opens on 20 June 2026</p>
           </div>
         </details>
-        <details class="card-container">
-          <summary>
-            <h5>📜 Government Circulars</h5>
-          </summary>
-          <div class="card-content" id="card-circulars">
-            <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
-            <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
-            <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
-            <a class="button button-primary" target="_blank" href="files/2025/NVS_2025-26.pdf">JNV Circular</a>
-          </div>
-        </details>
+
         <details class="card-container">
           <summary>
             <h5>❓ Quiz FAQs</h5>
